--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 debug.log
 src/config/key.js
-
+.eslintcache
 # dependencies
 /node_modules
 /.pnp
